--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.26.1",
     "next": "12.1.1",
     "next-auth": "^4.3.1",
+    "rc-slider": "^10.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.5",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/node": "17.0.23",
+    "@types/rc-slider": "^9.3.1",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
     "@types/styled-components": "^5.1.24",
